Fixed cut off jobs at the bottom of the my jobs and applications pages.

--- a/esljobmap/static/foundation/scss/section/_job_list.scss
+++ b/esljobmap/static/foundation/scss/section/_job_list.scss
@@ -3,6 +3,8 @@
 // ==========================================================================
 
 .job-list {
+    padding-bottom: 2rem;
+
     .list-results {
         display: inline-block;
 
